# change-intelligence

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DASHBOARD_PLAN.md  Dockerfile  MONITORING.md  PROOF.md  README.md  fly.toml  package.json  pyproject.toml
.github/workflows/: analyze-pr.yml  daily-metrics.yml  feedback.yml  sweep-open-prs.yml
change_intelligence/: analysis.py  backfill.py  dashboard.py  feedback.py  github_client.py  metrics.py  migrate_default_memories.py  novyx_store.py  ownership.py  restore_space_bootstrap.py  run_event.py  run_feedback.py  server.py  service.py  surface_map.py  sweep_open_prs.py
change_intelligence/seeds/: doc_ownership.json  novyx-core.json
src/: cli.js  index.js  server.js
src/lib/: github.js  index-docs.js  load-diff.js  parse-diff.js  rank-docs.js  render-markdown.js
test/: change-intelligence.test.js  server.test.js
test/fixtures/: sample.patch  showcase-event.json
test/fixtures/repo/docs/: billing.md  onboarding.md
test/fixtures/repo/src/billing/: createCheckoutSession.ts
test/fixtures/showcase/docs/: search-reference.md
test/fixtures/showcase/docs/onboarding/: search-quickstart.md
test/fixtures/showcase/docs/support/: search-faq.md
tests/: test_backfill.py  test_dashboard.py  test_feedback_and_metrics.py  test_knowledge_updates.py  test_memory_ranking.py  test_novyx_store.py  test_ownership.py  test_release_notes.py  test_service.py  test_surface_map.py  test_sweep_open_prs.py
