[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "change-intelligence-app"
version = "0.1.0"
description = "Standalone GitHub App for product change intelligence backed by Novyx."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "novyx>=3.0.1",
  "PyJWT[crypto]>=2.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
packages = ["change_intelligence"]
